# serde-appxmanifest

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
assets/xml/: 31896935-DD54-4362-ACDD-6DA496624671_8yektv5z29sbg.xml  91b3cc93-5e27-4b3e-9d97-dd137b7fb3ea_8yektv5z29sbg.xml  BandizipShellext2_y8jx0atjth7em.xml  HRContextMenu_m6ed0pe7fcjg8.xml  Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.xml  Microsoft.VSCodeInsiders_1.0.0.0_neutral__8wekyb3d8bbwe.xml  Microsoft.WidgetsPlatformRuntime_8wekyb3d8bbwe.xml  Microsoft.WindowsStore_8wekyb3d8bbwe.xml  Microsoft.WindowsTerminal_8wekyb3d8bbwe.xml  MicrosoftWindows.Client.CBS_cw5n1h2txyewy.xml  MicrosoftWindows.Client.CoreAI_cw5n1h2txyewy.xml  MicrosoftWindows.Client.WebExperience_cw5n1h2txyewy.xml  MicrosoftWindows.CrossDevice_cw5n1h2txyewy.xml  QQExtension_mgek679tqnc4e.xml
src/: lib.rs  main.rs
