[package]
name = "serde-appxmanifest"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "serde-appxmanifest"
repository = "https://github.com/ahaoboy/serde-appxmanifest"
homepage = "https://github.com/ahaoboy/serde-appxmanifest"
authors = ["ahaoboy"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-xml-rs = { version = "0.8" }
